# SuperTurr

./: Makefile.am  Makefile.in  README.md  SuperTurr-Alpha191231_README.txt  aclocal.m4  configure.ac  debug.txt  start  superturr.desktop
data/: Makefile.am  intro.txt  superturr.strf
data/images/tilesets/: gods-1.stgt  gods-10.stgt  gods-11.stgt  gods-12.stgt  gods-13.stgt  gods-14.stgt  gods-15.stgt  gods-16.stgt  gods-2.stgt  gods-3.stgt  gods-4.stgt  gods-5.stgt  gods-6.stgt  gods-7.stgt  gods-8.stgt  gods-9.stgt  main.stgt  superturr.stgt  turri-1.stgt  turri-2.stgt  turri-3.stgt  turri-4.stgt  turri-plants.stgt  turri-rock1.stgt  turri-rock2.stgt  turri-rock3.stgt  turri-rock5.stgt  turri-rock6.stgt  turri-rock7.stgt  turri-water.stgt  turri_column.stgt  turri_pipe-1.stgt  turri_pipe-1.wtf  turri_pipe-2.stgt  turri_plants-1.stgt  turri_plants-2.stgt
data/images/worldmap/: walkers_island.stwt
data/levels/bonus1/: abednego-level1.stl  abednego-level2.stl  abednego-level3.stl  abednego-level4.stl  bonus-level1.stl  bonus-level2.stl  bonus-level3.stl  bonus-level5.stl  matr1x-level1.stl  matr1x-level2.stl  matr1x-level3.stl  thompson-level2.stl  torfi-level1.stl  torfi-level2.stl  torfi-level3.stl  wansti-level1.stl  wansti-level2.stl  wansti-level3.stl  wansti-level5.stl
data/levels/bonus2/: level1.stl  level10.stl  level11.stl  level12.stl  level16.stl  level17.stl  level18.stl  level19.stl  level2.stl  level20.stl  level24.stl  level27.stl  level6.stl  level7.stl  level8.stl  level9.stl
data/levels/misc/: menu.stl
data/levels/world1/: level1 — kopia.stlBKP  level1.stl  level10.stl  level11.stl  level12.stl  level13.stl  level14.stl  level15.stl  level16.stl  level17.stl  level18.stl  level19.stl  level2.stl  (+14 more)
data/music/: godsremix91.mod  pusty.xm
(+146 files in other folders)
