EXTRA_DIST = \
  superturr.strf \
  @DOLLAR_SIGN@(wildcard *.txt) \
  CREDITS \
  @DOLLAR_SIGN@(wildcard sounds/*.wav) \
  images/icon.xpm \
  @DOLLAR_SIGN@(wildcard images/*.png) \
  @DOLLAR_SIGN@(wildcard images/*.xpm) \
  @DOLLAR_SIGN@(wildcard images/background/*.png) \
  @DOLLAR_SIGN@(wildcard images/background/*.jpg) \
  @DOLLAR_SIGN@(wildcard images/icons/*.png) \
  @DOLLAR_SIGN@(wildcard images/icons/*.xpm) \
  @DOLLAR_SIGN@(wildcard images/shared/*.png) \
  @DOLLAR_SIGN@(wildcard images/status/*.png) \
  @DOLLAR_SIGN@(wildcard images/worldmap/*.png) \
  @DOLLAR_SIGN@(wildcard images/worldmap/*.stwt) \
  @DOLLAR_SIGN@(wildcard images/title/*.png) \
  @DOLLAR_SIGN@(wildcard images/title/*.jpg) \
  @DOLLAR_SIGN@(wildcard images/tilesets/*.png) \
  @DOLLAR_SIGN@(wildcard images/tilesets/*.stgt) \
  @DOLLAR_SIGN@(wildcard levels/bonus1/*.stl) \
  @DOLLAR_SIGN@(wildcard levels/bonus2/*.stl) \
  @DOLLAR_SIGN@(wildcard levels/worldmaps/*.stwm) \
  @DOLLAR_SIGN@(wildcard levels/misc/*.stl) \
  @DOLLAR_SIGN@(wildcard levels/world1/*.stl) \
  @DOLLAR_SIGN@(wildcard music/*.ogg) \
  @DOLLAR_SIGN@(wildcard music/*.mod) \
  @DOLLAR_SIGN@(wildcard music/*.MOD) \
  @DOLLAR_SIGN@(wildcard sounds/*.wav)

nobase_dist_pkgdata_DATA = $(EXTRA_DIST)

# EOF #
